Merged PR 1213: feat(data-service): file download have name